|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-06-24 Raphael Geissert
	- ENGINE:
		* Fixed #425: WARNING: KEY or IV has invalid length
	- SETUP:
		* Fixed #428: ERROR: External command '/usr/bin/mysql --host=localhost --user=root --pass= < /tmp/db.sql 1>/tmp/db.sql.stdout 2>/tmp/db.sql.stderr' returned '1' 

2007-06-21 Benedikt Heintel
	- GUI:
		* PMA Version 2.10.2

2007-06-22 Raphael Geissert
	- ENGINE:
		* Fixed #423: Undefined subroutine &main::dirname in ispcp_common_code.pl line 37
		* Fixed #424: scalar being compared against integer
		* Fixed #425: WARNING: KEY or IV has invalid length
	- SETUP:
		* Migration script now restarts the services
		* Fixed #421: ispcp-setup errors in crontab file
		* make uninstall now also removes fastcgi.conf
		* Renamed fastcgi.conf to fastcgi_ispcp.conf to prevent replacing existing fastcgi.conf

2007-06-21 Raphael Geissert
	- SETUP:
		* Fixed #407: Initialization vector must be exactly 8 bytes long when using the Blowfish cipher
	- ENGINE:
		* Separated methods from ispcp_common_code.pl in ispcp_common_methods.pl
		* Added VHCS 2.4.7.1 to ispCP Omega migration script

2007-06-20 Benedikt Heintel
	- GUI:
		* Reorganized input check functions
	- ENGINE:
		* Further AWStats integration

2007-06-20 Raphael Geissert
	- GUI:
		* Fixed #418: ERROR: The php-extension 'mcrypt' not loaded!

2007-06-19 Raphael Geissert
	- SETUP:
		* Fixed #410: Undefined subroutine &main::get_file called
	- GUI:
		* Improved security and removed redundant stuff
		* Fixed #403: Can't remove Mysql database

2007-06-18 Raphael Geissert
	- SETUP:
		* Fixed #407: Initialization vector must be exactly 8 bytes long when using the Blowfish cipher
	- DOCS:
		* Removed libnet-perl from Ubuntu fesity's packages list
	- GUI: